# serial

./: .gitignore  .travis.yml  BUILD  CHANGELOG.rst  CMakeLists.txt  FindRt.cmake  Findserial.cmake  Makefile  README.md  appveyor.yml  changes.txt  conanfile.py  conanfile.txt  deps.repos  groups  index.html  mainpage.dox  manifest.xml  package.xml  package.xml.in  params.json  project.config  serial.cmake  serial.makefile  serial.mk  serial.pc.in  serial.rosinstall  serial.sublime-project  serial.sublime-workspace  serial_ros.cmake  stack.xml
.circleci/: config.yml
android/: README.md  build.gradle
android/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  serialized-form.html
android/jni/: Android.mk  Application.mk
android/sample/: build.gradle
cmake/: Findpthread.cmake  Findrt.cmake  serialConfig.cmake  serialConfig.cmake.in  serialVersion.cmake
doc/: Doxyfile  serial.dox
doc/0.2/: class_serial_1_1_scoped_read_lock.html  classserial_1_1_i_o_exception.html  classserial_1_1_port_not_opened_exception.html  classserial_1_1_serial.html  globals.html  globals_defs.html  namespacemembers_enum.html  namespaces.html  namespaceserial.html  namespaceserial_1_1serial_1_1_serial.html  serial_8cc__incl.map  unix_8h.html  unix_8h__incl.map  unix_8h__incl.md5
doc/1.0/: classserial_1_1_port_not_opened_exception.html  classserial_1_1_serial_exception_base.html  classserial_1_1_serial_execption.html  globals_defs.html  index.html  namespacemembers.html  namespacemembers_eval.html  namespaces.html  namespaceserial_1_1_serial.html  namespaceserial_1_1serial.html  serial_8cc.html  serial_8h_source.html  v8stdint_8h__dep__incl.map  win_8h__dep__incl.md5  win_8h__incl.map  win_8h__incl.md5  win_8h_source.html  windows_8cc.html  windows_8h.html
doc/1.0.1/: class_serial_1_1_scoped_write_lock.html  classserial_1_1_i_o_exception.html  classserial_1_1_port_not_opened_exception.html  classserial_1_1_serial.html  classserial_1_1serial_1_1_serial_1_1_serial_impl.html  functions_vars.html  globals.html  index.html  namespacemembers.html  namespacemembers_eval.html  namespaceserial.html  namespaceserial_1_1serial.html  namespaceserial_1_1serial_1_1_serial.html  serial__example_8cc.html  unix_8cc.html  unix_8cc__incl.md5  unix_8h_source.html  v8stdint_8h.html  v8stdint_8h__incl.md5  v8stdint_8h_source.html
doc/1.1.0/: annotated.html  class_serial_1_1_scoped_read_lock.html  class_serial_1_1_scoped_write_lock.html  classes.html  classserial_1_1_i_o_exception.html  classserial_1_1_port_not_opened_exception.html  classserial_1_1_serial.html  classserial_1_1_serial_execption.html  classserial_1_1serial_1_1_serial_1_1_serial_impl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  namespaceserial.html  namespaceserial_1_1serial.html  namespaceserial_1_1serial_1_1_serial.html  serial_8cc.html  serial_8dox.html  serial_8h.html  serial_8h_source.html  serial__example_8cc.html  structserial_1_1_timeout.html  unix_8cc.html  unix_8h.html  unix_8h_source.html  v8stdint_8h.html  v8stdint_8h_source.html  win_8cc.html  win_8h.html  win_8h__dep__incl.map  win_8h_source.html
docs/: index.html
docs/v0.2/: annotated.html  class_serial_1_1_scoped_write_lock.html  classes.html  classserial_1_1_serial_exception_base.html  classserial_1_1_serial_execption.html  classserial_1_1serial_1_1_serial_1_1_serial_impl.html  files.html  functions.html  functions_func.html  globals_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_eval.html  namespaceserial_1_1serial.html  serial_8cc.html  serial_8h.html  serial_8h__dep__incl.map  serial_8h_source.html  unix_8cc.html  unix_8cc__incl.map  unix_8cc__incl.md5  unix_8h__dep__incl.md5  unix_8h_source.html  windows_8cc.html  windows_8cc__incl.md5  windows_8h.html  windows_8h__dep__incl.md5  windows_8h_source.html
docs/v1.0/: annotated.html  class_serial_1_1_scoped_read_lock.html  class_serial_1_1_scoped_write_lock.html  classes.html  classserial_1_1_i_o_exception.html  classserial_1_1_port_not_opened_exception.html  classserial_1_1_serial.html  classserial_1_1_serial_exception_base.html  classserial_1_1_serial_execption.html  classserial_1_1serial_1_1_serial_1_1_serial_impl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  namespaceserial.html  namespaceserial_1_1serial.html  namespaceserial_1_1serial_1_1_serial.html  serial_8cc.html  serial_8cc__incl.map  serial_8cc__incl.md5  serial_8dox.html  serial_8h.html  serial_8h__dep__incl.map  serial_8h__dep__incl.md5  serial_8h__incl.map  serial_8h__incl.md5  serial_8h_source.html  serial__example_8cc.html  (+25 more)
docs/v1.0.1/: annotated.html  class_serial_1_1_scoped_read_lock.html  classes.html  classserial_1_1_serial_execption.html  files.html  functions.html  functions_func.html  globals_defs.html  globals_func.html  graph_legend.html  namespacemembers_enum.html  namespaces.html  serial_8cc.html  serial_8cc__incl.map  serial_8dox.html  serial_8h.html  serial_8h_source.html  serial__example_8cc__incl.map  structserial_1_1_timeout.html  unix_8h.html  win_8cc.html  win_8cc__incl.map  win_8cc__incl.md5  win_8h.html  win_8h_source.html
examples/: serial_example.cc  serial_example.cpp  serial_listener_example.cc
include/: serial.h
serial/: CMakeLists.txt  mainpage.dox  manifest.xml
src/: serial.cc  serial.cpp  serial_listener.cc  serial_old.cc  test_serial.cpp
tests/: CMakeLists.txt  serial_listener_tests.cc  serial_tests.cc  unix_serial_tests.cc
tests/proof_of_concepts/: python_serial_test.py  tokenizer.cc  tokenizer.cc.out
tests/unit/: unix_timer_tests.cc
visual_studio/: visual_studio.sln
(+137 files in other folders)
